--- a/templates/cassandra.yaml.j2
+++ b/templates/cassandra.yaml.j2
@@ -425,7 +425,7 @@ seed_provider:
       parameters:
           # seeds is actually a comma-delimited list of addresses.
           # Ex: "<ip1>,<ip2>,<ip3>"
-          - seeds: {{ cassandra_seeds }}
+          - seeds: "{{ cassandra_seeds }}"
 
 # For workloads with more data than can fit in memory, Cassandra's
 # bottleneck will be reads that need to fetch data from
